--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,40 @@
 body {
-    font-family: 'Open Sans', sans-serif;
     width: 1024px;
     height: 100%;
     margin: 0 auto;
+    font-size: 18px;
+    font-family: 'Lekton', sans-serif;
 }
 
+#navigation li {
+  list-style: none;
+  display: inline-block;
+}
 
+#navigation a {
+  display: block;
+  text-decoration: none;
+  margin: 0;
+  padding: 18px 36px 18px;
+  color: inherit;
+}
+
+#navigation a:hover {
+  color: grey;
+}
+
+#navigation {
+  text-align: center;
+  width: 100%;
+  font-style: bold;
+  font-size: 45px;
+}
+
+#footer {
+  margin-top: 100px;
+  text-align: center;
+}
+
+#footer a {
+  text-decoration: none;
+}
