--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -5,21 +5,30 @@
         <title>$title$</title>
         <!-- Theme -->
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <!-- Bootstrap -->
+        <link rel="stylesheet" type="text/css" href="/components/bootstrap/dist/css/bootstrap.min.css" />
         <!-- Hightlight.js -->
         <link rel="stylesheet" type="text/css" href="/components/highlightjs/styles/github.css" />
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lekton' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!-- FontAwesome -->
+        <link rel="stylesheet" type="text/css" href="/components/fontawesome/css/font-awesome.min.css" />
     </head>
     <body>
-        <div id="navigation">
-          <ul>
-            <li><a href="/index.html">B&lambda;og</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-          </ul>
-        </div>
+      <div class="container">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="navbar-header">
+            <h2><a href="/index.html">Some Lambdas and Other Machinery</a></h2>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ol class="nav navbar-nav navbar-right">
+              <li><a href="https://twitter.com/jordi_aranda"><i class="fa fa-twitter fa-2x"></i></a></li>
+              <li><a href="https://github.com/jarandaf"><i class="fa fa-github-alt fa-2x"></i></a></li>
+              <li><a href="https://stackoverflow.com/users/667147/jarandaf"><i class="fa fa-stack-overflow fa-2x"></i></a></li>
+            </ol>
+          </div>
+        </nav>  
         <div id="content">
             $body$
         </div>
@@ -29,6 +38,10 @@
           <p>Done with <a href="http://www.vim.org">Vim</a> & <a href="http://jaspervdj.be/hakyll/">Hakyll</a></p>
         </div>
         <!-- Some fancy stuff -->
+        <!-- jQuery -->
+        <script type="text/javascript" src="/components/jquery/dist/jquery.min.js"></script>
+        <!-- Bootstrap -->
+        <script type="text/javascript" src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
         <!-- Highlight.js -->
         <script type="text/javascript" src="/components/highlightjs/highlight.pack.js"></script>
         <script type="text/javascript">
@@ -44,5 +57,6 @@
           ga('create', 'UA-59531152-1', 'auto');
           ga('send', 'pageview');
         </script>
+      </div>
     </body>
 </html>
