--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -19,7 +19,7 @@
       <div class="container">
         <nav class="navbar navbar-default" role="navigation">
           <div class="navbar-header">
-            <h2><a href="/index.html">Some Lambdas and Other Machinery</a></h2>
+            <h2><a href="/">Some Lambdas and Other Machinery</a></h2>
           </div>
           <div class="collapse navbar-collapse">
             <ol class="nav navbar-nav navbar-right">
@@ -32,11 +32,10 @@
         <div id="content">
             $body$
         </div>
-        <div id="footer">
-          <p><a href="https://twitter.com/jordi_aranda">@jordi_aranda</a></p>
-          <p>Jordi Aranda &copy;</p>
-          <p>Done with <a href="http://www.vim.org">Vim</a> & <a href="http://jaspervdj.be/hakyll/">Hakyll</a></p>
-        </div>
+        <footer>
+          <span class="author"><a href="/about">Jordi Aranda &copy;</a></span>
+          <span class="credit">Powered by <a href="http://jaspervdj.be/hakyll/">Hakyll</a></span>
+        </footer>
         <!-- Some fancy stuff -->
         <!-- jQuery -->
         <script type="text/javascript" src="/components/jquery/dist/jquery.min.js"></script>
