--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -30,7 +30,7 @@
             </ol>
           </div>
         </nav>  
-        <div id="content">
+        <div id="content" class="row">
             $body$
         </div>
         <footer>
