--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -18,18 +18,22 @@
     </head>
     <body>
       <div class="container">
-        <nav class="navbar navbar-default" role="navigation">
-          <div class="navbar-header">
-            <h2><a href="/">Some Lambdas and Other Machinery</a></h2>
+        <div class="row">
+          <div class="col-md-12 col-xs-12">
+            <nav class="navbar navbar-default" role="navigation">
+              <div class="navbar-header">
+                <h2><a href="/">Some Lambdas and Other Machinery</a></h2>
+              </div>
+              <div class="collapse navbar-collapse">
+                <ol class="nav navbar-nav navbar-right">
+                  <li><a href="https://twitter.com/jordi_aranda"><i class="fa fa-twitter fa-2x"></i></a></li>
+                  <li><a href="https://github.com/jarandaf"><i class="fa fa-github-alt fa-2x"></i></a></li>
+                  <li><a href="https://stackoverflow.com/users/667147/jarandaf"><i class="fa fa-stack-overflow fa-2x"></i></a></li>
+                </ol>
+              </div>
+            </nav>
           </div>
-          <div class="collapse navbar-collapse">
-            <ol class="nav navbar-nav navbar-right">
-              <li><a href="https://twitter.com/jordi_aranda"><i class="fa fa-twitter fa-2x"></i></a></li>
-              <li><a href="https://github.com/jarandaf"><i class="fa fa-github-alt fa-2x"></i></a></li>
-              <li><a href="https://stackoverflow.com/users/667147/jarandaf"><i class="fa fa-stack-overflow fa-2x"></i></a></li>
-            </ol>
-          </div>
-        </nav>  
+        </div>
         <div id="content" class="row">
             $body$
         </div>
