--- a/templates/post.html
+++ b/templates/post.html
@@ -1,19 +1,17 @@
-<div class="post row">
-  <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
-    <article>
-      <header>
-        <div class="meta">
-          Posted on $date$ $if(author)$ by $author$.$endif$
-          <div class="tags">$tags$</div>
-        </div>
-      </header>
-      <div>
-        $body$
+<div class="post">
+  <article>
+    <header>
+      <div class="meta">
+        Posted on $date$ $if(author)$ by $author$.$endif$
+        <div class="tags">$tags$</div>
       </div>
-    </article>
-  </div>
+    </header>
+    <div>
+      $body$
+    </div>
+  </article>
 </div>
-<div class="discussion">
+<div class="row">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_shortname = 'somelambdasandothermachinery'; // required: replace example with your forum shortname
