--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,6 @@
-<div class="row">
-  <div class="col-md-12 col-xs-12">
-    <div class="col-md-8 col-xs-8">
-      $body$
-    </div>
-    <div class="col-md-4 col-xs-4">
-      <img style="margin: 0 auto;" id="me" src="/images/me.png" alt="Jordi Aranda">
-    </div>
-  </div>
+<div style="margin-bottom: 100px;">
+  $body$
 </div>
+<!-- <div class="col-md-6 col-xs-6"> -->
+<!--   <img style="margin: 0 auto;" id="me" src="/images/me.png" alt="Jordi Aranda"> -->
+<!-- </div> -->
