--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -35,7 +35,13 @@
           </div>
         </div>
         <div id="content" class="row">
-            $body$
+          <div class="col-md-12 col-xs-12">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
+                $body$
+              </div>
+            </div>
+          </div>
         </div>
         <footer>
           <span class="author"><a href="/about">Jordi Aranda &copy;</a></span>
