--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -48,6 +48,13 @@
           <span class="credit">Powered by <a href="http://jaspervdj.be/hakyll/">Hakyll</a></span>
         </footer>
         <!-- Some fancy stuff -->
+        <!-- MathJax -->
+        <script type="text/x-mathjax-config">
+          MathJax.Hub.Config({
+              TeX: { equationNumbers: { autoNumber: "AMS" } }
+          });
+        </script>
+        <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <!-- jQuery -->
         <script type="text/javascript" src="/components/jquery/dist/jquery.min.js"></script>
         <!-- Bootstrap -->
